# esp32_s3_web_plc

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  api_handlers.c  api_handlers.h  main.c  plc_client.c  plc_client.h  plc_frame.c  plc_frame.h  plc_gateway_state.c  plc_gateway_state.h  plc_graph_binary.h  plc_graph_builder.c  plc_graph_builder.h  plc_graph_storage.c  plc_graph_storage.h  plc_protocol.h  plc_uart_client.c  plc_uart_client.h  web_server.c  web_server.h  wifi_ap.c  wifi_ap.h
web/: index.html
